--- a/NFT_exchange/package.json
+++ b/NFT_exchange/package.json
@@ -25,7 +25,8 @@
     "react-native-screens": "3.4.0",
     "react-native-stopwatch-timer": "0.0.21",
     "react-native-vector-icons": "^8.1.0",
-    "react-navigation": "4.4.4"
+    "react-navigation": "4.4.4",
+    "react-navigation-tabs": "2.11.1"
   },
   "devDependencies": {
     "@babel/core": "7.14.6",
