--- a/NFT_exchange/ios/Podfile
+++ b/NFT_exchange/ios/Podfile
@@ -14,6 +14,8 @@ target 'NFT_exchange' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'RNI18n', :path => '../node_modules/react-native-i18n'
+
   target 'NFT_exchangeTests' do
     inherit! :complete
     # Pods for testing
