--- a/NFT_exchange/package.json
+++ b/NFT_exchange/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@react-native-community/async-storage": "1.12.1",
     "@react-native-community/masked-view": "0.1.11",
+    "@react-native-firebase/app": "^12.4.0",
+    "@react-native-firebase/auth": "^12.4.0",
     "@react-navigation/native": "5.9.4",
     "@react-navigation/stack": "5.14.5",
     "i18n-js": "^3.8.0",
