--- a/NFT_exchange/package.json
+++ b/NFT_exchange/package.json
@@ -16,7 +16,7 @@
     "@react-native-firebase/auth": "^12.4.0",
     "@react-native-firebase/database": "^12.4.0",
     "@react-native-firebase/firestore": "^12.4.0",
-    "@react-navigation/native": "5.9.4",
+    "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "5.14.5",
     "i18n-js": "^3.8.0",
     "moment": "2.29.1",
@@ -32,7 +32,7 @@
     "react-native-screens": "3.4.0",
     "react-native-stopwatch-timer": "0.0.21",
     "react-native-vector-icons": "^8.1.0",
-    "react-navigation": "4.4.4",
+    "react-navigation": "^4.4.4",
     "react-navigation-tabs": "2.11.1"
   },
   "devDependencies": {
