--- a/NFT_exchange/package.json
+++ b/NFT_exchange/package.json
@@ -33,7 +33,9 @@
     "react-native-stopwatch-timer": "0.0.21",
     "react-native-vector-icons": "^8.1.0",
     "react-navigation": "^4.4.4",
-    "react-navigation-tabs": "2.11.1"
+    "react-navigation-tabs": "2.11.1",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "7.14.6",
